# NL2SQL_Agent

./: .env.example  .gitignore  README.md  TEXT_TO_SQL_AGENT_KNOWLEDGE_BASE.md  docker-compose.yml  pyproject.toml  requirements.txt
NL2SQL Agent Frontend Development/: index.html  nginx.conf  package-lock.json  package.json
app/: main.py
app/agent/: chart_suggester.py  contracts.py  error_reflector.py  nl2sql_agent.py  query_rewriter.py  sql_executor.py  (+4 more)
backend/: Dockerfile  __init__.py
config/: synonyms.json
tests/: test_agent_pipeline.py  test_api_contracts.py  test_connections_api.py  test_final_regressions.py  test_models_roundtrip.py  test_prompt_packing_regression.py  test_rag_acceptance.py  test_rag_access_control.py  test_rag_async_health.py  test_rag_checkpoint_suite.py  test_rag_concurrency_failure.py  test_rag_context_limiter.py  test_rag_debug_view.py  test_rag_degradation.py  test_rag_evaluation.py  test_rag_fewshot_multitenant.py  test_rag_finish_closeout.py  test_rag_foundation_properties.py  test_rag_indexing.py  test_rag_manager_observability.py  test_rag_profiled_prompt_multitenant.py  test_rag_profiling_knowledge.py  test_rag_prompt_packing.py  test_rag_property_closeout.py  test_rag_relationship_columns.py  test_rag_relationships.py  test_rag_retrieval_properties.py  test_rag_runtime.py  test_rag_sensitive_input.py  test_rag_sharding.py  test_rag_stability.py  test_rag_synonyms.py  test_rag_task_properties.py  test_rag_telemetry_system.py  test_repository_roundtrip.py  test_retrieval_timeout_guard.py  test_sample_db.py  test_sql_executor.py
(+134 files in other folders)
