[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "text-to-sql-agent"
version = "0.1.0"
description = "NL2SQL Agent backend with FastAPI orchestration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.6",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.1",
  "sqlalchemy>=2.0.32",
  "pymysql>=1.1.1",
  "psycopg[binary]>=3.2.1",
  "openai>=1.40.0",
  "anthropic>=0.34.0",
  "chromadb>=0.5.5",
  "rank-bm25>=0.2.2",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.3.2",
  "pytest-asyncio>=0.23.8",
  "ruff>=0.6.2",
]

[project.scripts]
text-to-sql-agent = "app.main:main"

[tool.setuptools]
include-package-data = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
